add responsive design layout

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ img, video, audio, iframe, table, form {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
+]
 }
 
 a.fbook, a.twit, a.gplus {
