add responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ header {
 }
 
 #navbar nav a.menu-icon {
-  display: none;
+  display: none; /* CSS to NOT display hamburger icon at default */
 }
 
 /*////////// LOGO //////////*/
