--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,7 +24,7 @@
 	}
 	
 	#logo h2 {
-		font-size: 2.2em
+		font-size: 2.2em;
 	}
 	
 	#social {
@@ -43,7 +43,7 @@
 		-moz-column-count: 2;
 		-webkit-column-count: 2;
 		column-count: 2;
-	
+	}
 }
 
 @media only screen and (max-width: 800px) {
@@ -75,20 +75,37 @@
 		-moz-column-count: 1;
 		-webkit-column-count: 1;
 		column-count: 1;
-	{
+	}
 }
 
 @media only screen and (max-width: 700px) {
 
-  #navbar nav a {
-    display: none;
-  }
+	#navbar nav a {
+		display: none;
+	}
 
-  #navbar nav a.menu-icon {
-    display: block;
-    float: right;
-    font-size: 1.5em;
-    padding: 10px 20px;
-    width: auto;
-  }
-  }
+	#navbar nav a.menu-icon {
+		display: block;
+		float: right;
+		font-size: 1.5em;
+		padding: 10px 20px;
+		width: auto;
+	}
+	
+	#logo {
+		padding: 60px 0 0;
+	}
+	
+	#social {
+		position: absolute;
+		top: 55px;
+		right: 4%;
+		width: auto;
+	}
+	
+}
+
+@media only screen and (max-width: 500px) {
+	#logo h2 {
+		visibility: hidden; 
+	}
