--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 @@media only screen and (max-width: 1108px) {
 
   .wrapper {
-    width: 90%
+    width: 90%;
   }
 
   #social {
@@ -13,5 +13,11 @@
 
   #social a {
     display: inline-block;
+  }
+}
+
+@@media only screen and (max-width: 900px) {
+  body {
+    font-size: 85%;
   }
 }
