--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,4 +20,74 @@
   body {
     font-size: 85%;
   }
+
+  #logo h1 {
+    width: 35px;
+    height: 35px;
+  }
+
+  #logo h2 {
+    font-size: 2.2em;
+  }
+
+  #social {
+    top: 72px;
+  }
+
+  .col-3 p {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@@media only screen (max-width: 800px) {
+  #navbar nav a {
+    font-size: 0.9em;
+  }
+}
+
+@@media only screen (max-width: 750px) {
+  .col-1, .col-2, .col-3 {
+    width: 100%;
+    margin-left: 0;
+    float: none;
+  }
+
+  .border_right {
+    border: 0;
+  }
+
+  #details div {
+    height: auto;
+    padding-bottom: 20px;
+  }
+
+  .col-3 p {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
+}
+
+@@media only screen (max-width: 700px) {
+  #navbar nav a {
+    display: none;
+  }
+
+  #navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.5em;
+    padding: 10px 20px;
+    width: auto;
+  }
+
+  #logo {
+    padding: 60px 0 0;
+  }
+
+  #social {
+    top: 60px;
+  }
 }
