--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,7 +70,7 @@
   }
 }
 
-@media only screen and (max-wdith: 700px) {
+@media only screen and (max-width: 700px) {
   #navbar nav a {
     display: none;
   }
