--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@@media only screen and {max-width: 1108px) {
+@media only screen and {max-width: 1108px) {
   .wrapper {
     width: 90%;
   }
@@ -15,7 +15,7 @@
   }
 }
 
-@@media only screen and {max-width: 900px) {
+@media only screen and {max-width: 900px) {
   body {
     font-size: 85%;
   }
@@ -40,13 +40,13 @@
   }
 }
 
-@@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   #navbar nav a {
     font-size: 0.9em;
   }
 }
 
-@@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 750px) {
   .col-1, .col-2, .col-3 {
     width: 100%;
     margin-left: 0%;
