--- a/css/responsive.css
+++ b/css/responsive.css
@@ -50,3 +50,42 @@
         font-size: 0.9em;
     }
 }
+
+
+@media only screen and (max-width: 750px){
+  [class*="col-"]{
+    width:100%;
+    margin-left: 0;
+    float: none;
+  }
+  .border-right{
+    border: 0;
+  }
+
+  #details div{
+    /*tall as content*/
+    height: auto;
+    padding-bottom:20px ;
+  }
+
+  .col-3 p {
+      /*column-rule:;
+      column-gap: ;*/
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+  }
+
+}
+
+@media only screen and (max-width: 700px){
+
+#navbar nav a{
+  display: none;
+}
+
+.menu-icon{
+  display:
+}
+
+}
