--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,7 +17,7 @@
   .wrapper  {
     width: 90% <!--fluid width-->auto;
   }
-  #logo body   {
+  #logo body {
     font-size: 85%;
   }
   #logo h1 {
@@ -39,16 +39,10 @@
 
 @media only screen and (max-width: 800px) {
   #navbar nav a {
-    display: inline-block;
-    width: 16.67%;
-    margin: 0;
-    padding: 5px 5px;
-    text-transform: uppercase;
     font-size: 0.9em;
     }
 }
-@media only screen and (max-width: 750px)
-{
+@media only screen and (max-width: 750px) {
   .col-1, .col-2, .col-3 {
     width: 100%;
     margin-left: 0;
