add responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@ header {
   margin: 0 0 30px;
 }
 
+
 /*////////// NAVBAR //////////*/
 
 #navbar {
@@ -287,7 +288,7 @@ header {
 /*////////// LOGO //////////*/
 
 #logo {
-  padding: 74px 0 0;
+  padding: 70px 0 0;
 }
 
 #logo h1 {
@@ -297,7 +298,7 @@ header {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;
+  margin: 0 0 10px;
   background: url(../images/exceptional-logo.png) no-repeat;
   background-size: 100% 100%;
 }
@@ -307,7 +308,7 @@ header {
   font: 2.5em "Clicker Script", cursive;
   margin: 0;
   position: relative;
-  top: -9px;
+  top: 9px;
   left: 5px;
   color: #303;
 }
