--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (maximum-width: 1108px){
+@media only screen and (max-width: 1108px){
 
   .wrapper{
     width:90%;
@@ -14,4 +14,36 @@
 
     display:inline-block;
   }
+.col-3 p{
+  moz-column-count: 3;
+  -webkit-column-count: 3;
+  column-count: 3;
+
+}
+}
+@media only screen and (max-width:900px){
+
+  body{
+    font-size :85%;
+  }
+  #logo h1{
+    width: 35px;
+    height: 35px;
+
+  }
+  #logo h2{
+
+    font-size: 2.2em;
+  }
+  #social{
+    top: 72px;
+  }
+}
+@media only screen(max-width:800px){
+  #navbar nav a{
+    font-size: 0.9em;
+
+
+  }
+
 }
