--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,10 +14,7 @@
 
     display:inline-block;
   }
-.col-3 p{
-  moz-column-count: 3;
-  -webkit-column-count: 3;
-  column-count: 3;
+
 
 }
 }
@@ -37,6 +34,11 @@
   }
   #social{
     top: 72px;
+  }
+  .col-3 p{
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
   }
 }
 @media only screen(max-width:800px){
