--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,41 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/*////////// GLOBAL //////////*/
+body, html {
+  margin: 0;
+  padding: 0;
+}
 
 body {
-  font-size: 100%;
+  background: url('../images/white-wood.jpg') fixed;
+  background-size: cover;
+}
+
+section, .footer-wrapper, #social-top a, #social-side a {
+  box-shadow: 0 .25rem 1rem rgba(0,0,0,.5);
 }
 
 h3 {
   margin: 0 0 10px;
 }
 
-ul, ol {
-  margin-bottom: 10px;
-}
-
-li {
-  margin-left: 20px;
-}
-
-p, address { 
-  font-size: 1em; /* 16px, ?pt, 100%, 1em */
+p { 
+  font-size: 1em;
   line-height: 1.5em;
 }
 
-figure {
-  margin: 0 0 10px;
+a, a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+img, video, audio, table, form {
+  width: 100%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
 
 figcaption {
@@ -34,183 +44,57 @@ figcaption {
   text-align: right;
 }
 
-table {
-  margin: 0 0 20px;
-  border-top: 1px solid #ccc;
-  border-left: 1px solid #ccc;
-}
-
-tr:nth-child(even) {
-  background: #efefef;
-}
-
-th, td {
-  padding: 10px;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-}
-
-th {
-  background: #555;
-  color: white;
-}
-
-input, textarea {
-  display: block;
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 5px;
-  box-shadow: 0 3px 5px #ccc;
-  border: 1px solid #ccc;
-}
-
-input[type="submit"] {
-  margin-top: 5px;
-  width: 100px;
-  background: black;
-  color: white;
-  border-radius: 25px;
-  border: 0;
-}
-
-input[type="submit"]:hover {
-  background: #555;
-}
-
-iframe {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  height: 403px;
-}
-
 .milk-text {
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
-  text-shadow: 0 2px 3px #000;
-}
-
-.shadow {
-  box-shadow: 0 3px 10px #333;
-}
-
-.border-right {
-  border-right: 1px dotted #ccc;
-  padding-right: 30px;
+  text-shadow: 0 0 .15rem #000, 0 .15rem .25rem #000, 0 .15rem 2rem #000;
 }
 
 
-/*////////// BACKGROUNDS //////////*/
 
-.white-wood {
-  background: url(../images/white-wood.jpg) no-repeat center top;
-  background-size: cover;
+/*///////////////////////////*/
+/*SOCIAL*/
+/*///////////////////////////*/
+
+#social-side, #social-top {
+  display: flex;
 }
 
-.light-fade {
-  background: #efefef; /* Old browsers */
-  background: -moz-linear-gradient(top,  #efefef 0%, #ffffff 24%, #ffffff 68%, #dddddd 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efefef), color-stop(24%,#ffffff), color-stop(68%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefef', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
-}
-
-.medium-fade {
-  background: rgb(229,229,229); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(229,229,229,1) 0%, rgba(255,255,255,1) 99%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,229,229,1)), color-stop(99%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* W3C */
-}
-
-/*/////// MEDIA ////////*/
-
-img, video, audio, iframe, table, form {
-  width: 100%; /* IE */
-  max-width: 100%; /* FF, Safari, Chrome */
-}
-
-/*////////// FIXES //////////*/
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
-}
-
-.clear {
-  clear:both;
-}
-
-/*/////// LAYOUT ////////*/
-
-.wrapper {
-  width: 960px;
-  margin: 0 auto;
-}
-
-.col-1 {
-  float: left;
-  width: 32%;
-}
-
-.col-2 {
-  float: left;
-  width: 66%;
-}
-
-.col-3 p {
-  -moz-column-rule: 1px dotted #ccc;
-  -webkit-column-rule: 1px dotted #ccc;
-  column-rule: 1px dotted #ccc;
-  -moz-column-gap: 1.5em;
-  -webkit-column-gap: 1.5em;
-  column-gap: 1.5em;
-  -moz-column-count: 3;
-  -webkit-column-count: 3;
-  column-count: 3;
-}
-
-[class*="col-"] {
-  margin-left: 2%;
-}
-
-.first {
-  margin-left: 0%;
-}
-
-/*/////// SOCIAL ////////*/
-
-#social {
+#social-side {
+  flex-flow: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 36px;
+  height: 128px;
   position: fixed;
-  top: 163px;
-  right: 20px;
-  width: 40px;
+  top: 155px;
+  right: 16px;
   z-index: 2;
+  transition-duration: .667s;
 }
 
-#social a {
+#social-top {
+  justify-content: space-between;
+  margin-top: -4rem;
+  width: 128px;
+  height: 48px;
+  z-index: 2;
+  transition-duration: .333s;
+}
+
+#social-top a {
+  box-shadow: 0 .075rem .25rem .25rem rgba(0,0,0,.15) ;
+  border-radius: 4px;
+}
+
+#social-side a, #social-top a {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 34px;
+  height: 34px;
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
+  border-radius: 4px;
 }
 
 a.fbook, a.twit, a.gplus {
@@ -229,130 +113,270 @@ a.gplus { background-position: 0 -80px; }
 a.gplus:hover { background-position: -40px -80px; }
 a.gplus:active { background-position: -80px -80px; }
 
-/*////////// HEADER //////////*/
 
-header {
-  margin: 0 0 30px;
-}
 
-/*////////// NAVBAR //////////*/
+/*///////////////////////////*/
+/*HEADER*/
+/*///////////////////////////*/
 
-#navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
+.header-wrapper {
   width: 100%;
-  z-index: 2;
-  border-bottom: 1px solid #ccc;
-  text-align: center;
-}
-
-#navbar nav {
-  border-left: 1px solid #ccc;
-}
-
-#navbar nav a {
-  display: inline-block;
-  width: 16.6666667%;
-  margin: 0;
-  padding: 22px 0;
-  text-transform: uppercase;
-  color: black;
-  text-align: center;
-  border-right: 1px solid #ccc;
-  text-decoration: none;
-  font: 1em "Trebuchet MS", Arial, sans-serif;
-}
-
-#navbar nav a.selected {
-  background: #333;
-  color: white;
-}
-
-#navbar nav a:hover {
-  color: white;
-  background: rgb(0,0,0); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(71,71,71,1) 28%, rgba(81,81,81,1) 35%, rgba(71,71,71,1) 72%, rgba(43,43,43,1) 87%, rgba(28,28,28,1) 91%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(28%,rgba(71,71,71,1)), color-stop(35%,rgba(81,81,81,1)), color-stop(72%,rgba(71,71,71,1)), color-stop(87%,rgba(43,43,43,1)), color-stop(91%,rgba(28,28,28,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */
-}
-
-#navbar nav a.menu-icon {
-  display: none;
-}
-
-/*////////// LOGO //////////*/
-
-#logo {
-  padding: 74px 0 0;
-}
-
-#logo h1 {
-  display: inline-block;
-  width: 45px;
-  height: 45px;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  margin: 0;
-  background: url(../images/exceptional-logo.png) no-repeat;
-  background-size: 100% 100%;
-}
-
-#logo h2 {
-  display: inline-block;
-  font: 2.5em "Clicker Script", cursive;
-  margin: 0;
-  position: relative;
-  top: -9px;
-  left: 5px;
-  color: #303;
-}
-
-/*////////// MAIN SECTIONS //////////*/
-
-section {
-  padding: 30px;
-  margin-bottom: 20px;
   background: white;
 }
 
-/*////////// DETAILS //////////*/
-
-#details {
-  border-top: 1px solid white;
+header {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-#details div {
-  height: 221px;
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+  margin: 0;
+  line-height: 100%;
 }
 
-#details a:link, #details a:visited {
-  color: black;
-  text-decoration: none;
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+  margin: 0;
+  line-height: 100%;
 }
 
-#details a:hover {
-  color: black;
-  text-decoration: underline;
+.nav-wrapper {
+  width: 100%;
+  position: sticky;
+  top: 0px;
+  background: white;
+  box-shadow: inset 0 -.15rem .15rem rgba(0,0,0,.25);  
 }
 
-#details a:active {
-  color: red;
+.hamburger {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 32px;
+  margin: 0 1rem 1rem;
+  font-size: 1rem;
+  color: grey;
+  border: 2px solid lightgrey;
+  border-radius: 4px;
 }
 
-/*////////// FOOTER //////////*/
+nav {
+  display: flex;
+  flex-flow: row nowrap;
+  margin: 0 auto;
+  max-width: 960px;
+}
+
+nav a {
+  font-family: sans;
+  display: flex;
+  padding: 1rem;
+  flex-basis: 1%;
+  flex-grow: 1;
+  text-align: center;
+  justify-content: center;
+  align-items: baseline;
+  box-shadow: inset 0 -.15rem .15rem rgba(0,0,0,.25);
+}
+
+nav a:hover {
+  box-shadow: 0 .15rem .5rem rgba(0,0,0,.25), inset 0 -.15rem .15rem rgba(0,0,0,.25);
+  color: rgb(70%, 15%, 30%);
+}
+
+nav a:active {
+  box-shadow: inset 0 .05rem .25rem #aaa;
+  color: inherit;
+}
+
+.current {
+  background: rgba(70%, 5%, 10%, .1);
+}
+
+
+
+/*///////////////////////////*/
+/*PAGE CONTENT*/
+/*///////////////////////////*/
+
+.page-wrapper {
+  width: 100%;
+}
+
+.page-content, .footer-content {
+  padding: 1rem;
+  max-width: 960px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+section {
+  padding: 1rem;
+  background: white;
+  border-radius: 4px;
+}
+
+figure {
+  margin: 1rem;
+}
+
+figcaption {
+  line-height: 1rem;
+}
+
+table {
+  text-align: left;
+}
+
+.hrule, #featured-property, #new, #report {
+  grid-column: span 3;
+}
+
+#featured-property p {
+  column-count: 2;
+}
+
+#promotional, #contact {
+  grid-column: span 2;
+}
+
+#featured-listings {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+#map {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#contact form {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: baseline;
+}
+
+#contact label {
+  flex-basis: 15%;
+  flex-basis: content;
+}
+
+#contact label:nth-of-type(0n+4) {
+  flex-basis: 100%;
+  margin: 1rem 0 .5rem;
+}
+
+#contact input, textarea {
+  margin-bottom: .25rem;
+  flex-basis: 85%;
+  flex-grow: 1;
+}
+
+#contact input:last-of-type {
+  margin: 0;
+}
+
+
+
+/*///////////////////////////*/
+/*FOOTER*/
+/*///////////////////////////*/
+
+.footer-wrapper {
+  background: white;
+  width: 100%;
+}
+
+.footer-content {
+  margin-bottom: 0;
+  background: white;
+}
+
+.footer-content > section {
+  box-shadow: none;
+}
+
+.footer-content a:hover {
+  color: rgb(70%, 15%, 30%);
+}
+
+.footer-content a:not(:last-of-type) {
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+
+.footer-content *:last-child {
+  margin-bottom: 0;
+}
 
 footer {
-  text-align: center; 
-  font-size: 0.75em;
-  padding: 10px;
-  background: #eee;
-  border-top: 1px solid; 
+  padding: 1rem;
+  text-align: center;
+  color: grey;
 }
 
 
 
+/*///////////////////////////*/
+/*MEDIA QUERIES*/
+/*///////////////////////////*/
+
+@media (max-width: 1095px) {
+  #social-side {
+    right: -4rem;
+    transition-duration: .333s;
+  }
+
+  #social-top {
+    margin-top: 0;
+    transition-duration: .667s;
+  }
+}
+
+@media (max-width: 900px) {
+  #contact {
+    grid-column: span 3;
+  }
+
+  #map {
+    grid-column: span 3;
+    grid-row: 2;
+    height: 50vw;
+  }
+}
+
+@media (max-width: 720px) {
+  #featured-property p {
+    column-count: 1;
+  }
+
+  #promotional, #news, #featured-listings, .page-content > section {
+    grid-column: span 3;
+  }
+
+  .footer-content {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 640px) {
+  .footer-content {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+
+  nav a {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
