--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ li {
   margin-left: 20px;
 }
 
-p, address { 
+p, address {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -177,13 +177,13 @@ img, video, audio, iframe, table, form {
 .col-3 p {
   -moz-column-rule: 1px dotted #ccc;
   -webkit-column-rule: 1px dotted #ccc;
-  column-rule: 1px dotted #ccc;
+  column-rule: 1px dotted #ccc; /* border between columns */
   -moz-column-gap: 1.5em;
   -webkit-column-gap: 1.5em;
-  column-gap: 1.5em;
+  column-gap: 1.5em; /* spacing between columns */
   -moz-column-count: 3;
   -webkit-column-count: 3;
-  column-count: 3;
+  column-count: 3; /* number of columns */
 }
 
 [class*="col-"] {
@@ -280,7 +280,7 @@ header {
   background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */
 }
 
-#navbar nav a.menu-icon {
+#navbar nav a.menu-icon { /* hides hamburger menu icon */
   display: none;
 }
 
@@ -347,12 +347,9 @@ section {
 /*////////// FOOTER //////////*/
 
 footer {
-  text-align: center; 
+  text-align: center;
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid; 
+  border-top: 1px solid;
 }
-
-
-
