--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 1108px) {
+
   .wrapper {
     width: 90%;
   }
@@ -29,7 +30,7 @@
   #social {
     top: 72px;
   }
-  .col-3 p{
+  .col-3 p {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
@@ -57,6 +58,34 @@
     height: auto;
     padding-bottom: 20px;
   }
+  .col-3 p{
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
 }
 
-/* 24:28 */
+@media only screen (max-width: 700px) {
+    #navbar nav a {
+      display: none;
+    }
+    #navbar nav a.menu-icon {
+      display: block;
+      float: right;
+      font-size: 1.5em;
+      padding: 10px 20px;
+      width: auto;
+    }
+    #logo {
+      padding: 60px 0 0;
+    }
+    #social {
+      top: 60px;
+    }
+}
+
+@media only screen (max-width: 495px) {
+  #logo h2 {
+    visibility: hidden;
+  }
+}
