--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 /*////////// GLOBAL //////////*/
 
 body {
-  font-size: 100%;
+  font-size: 100%
 }
 
 h3 {
@@ -16,10 +16,10 @@ ul, ol {
 }
 
 li {
-  margin-left: 20px;
+  margin-left: 20px
 }
 
-p, address { 
+p, address {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -40,11 +40,11 @@ table {
   border-left: 1px solid #ccc;
 }
 
-tr:nth-child(even) {
+tr:nth-child(even){
   background: #efefef;
 }
 
-th, td {
+th, td{
   padding: 10px;
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
@@ -56,12 +56,12 @@ th {
 }
 
 input, textarea {
-  display: block;
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 5px;
-  box-shadow: 0 3px 5px #ccc;
-  border: 1px solid #ccc;
+display: block;
+width: 100%;
+padding: 5px;
+margin-bottom: 5px;
+box-shadow: 0 3px 5px #ccc;
+border: 1px solid # ccc;
 }
 
 input[type="submit"] {
@@ -70,10 +70,10 @@ input[type="submit"] {
   background: black;
   color: white;
   border-radius: 25px;
-  border: 0;
+  boarder: 0;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover{
   background: #555;
 }
 
@@ -92,23 +92,22 @@ iframe {
 }
 
 .shadow {
-  box-shadow: 0 3px 10px #333;
+box-shadow: 0 3px 10px #333;
 }
 
-.border-right {
+.border-right{
   border-right: 1px dotted #ccc;
   padding-right: 30px;
 }
 
-
 /*////////// BACKGROUNDS //////////*/
 
-.white-wood {
-  background: url(../images/white-wood.jpg) no-repeat center top;
-  background-size: cover;
+.white-wood{
+background: url(../images/white-wood.jpg) no-repeat center top;
+background-size: cover;
 }
 
-.light-fade {
+.light-fade{
   background: #efefef; /* Old browsers */
   background: -moz-linear-gradient(top,  #efefef 0%, #ffffff 24%, #ffffff 68%, #dddddd 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efefef), color-stop(24%,#ffffff), color-stop(68%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
@@ -117,17 +116,19 @@ iframe {
   background: -ms-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefef', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
-}
+  }
 
-.medium-fade {
-  background: rgb(229,229,229); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(229,229,229,1) 0%, rgba(255,255,255,1) 99%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,229,229,1)), color-stop(99%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* W3C */
-}
+  .medium-fade{
+    background: rgb(229,229,229); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(229,229,229,1) 0%, rgba(255,255,255,1) 99%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,229,229,1)), color-stop(99%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* W3C */
+  }
+
+
 
 /*/////// MEDIA ////////*/
 
@@ -167,11 +168,13 @@ img, video, audio, iframe, table, form {
 .col-1 {
   float: left;
   width: 32%;
+
 }
 
 .col-2 {
   float: left;
   width: 66%;
+
 }
 
 .col-3 p {
@@ -230,14 +233,13 @@ a.gplus:hover { background-position: -40px -80px; }
 a.gplus:active { background-position: -80px -80px; }
 
 /*////////// HEADER //////////*/
-
 header {
   margin: 0 0 30px;
 }
 
-/*////////// NAVBAR //////////*/
 
-#navbar {
+/*////////// NAVBAR //////////*/
+#navbar{
   position: fixed;
   top: 0;
   left: 0;
@@ -248,12 +250,12 @@ header {
 }
 
 #navbar nav {
-  border-left: 1px solid #ccc;
+border-left: 1px solid #ccc;
 }
 
-#navbar nav a {
+#navbar nav a{
   display: inline-block;
-  width: 16.6666667%;
+  width:16.6666667%;
   margin: 0;
   padding: 22px 0;
   text-transform: uppercase;
@@ -265,8 +267,8 @@ header {
 }
 
 #navbar nav a.selected {
-  background: #333;
-  color: white;
+background: #333;
+color: white;
 }
 
 #navbar nav a:hover {
@@ -280,14 +282,14 @@ header {
   background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */
 }
 
-#navbar nav a.menu-icon {
+#navbar nav a.menu-icon { /*set menu icon invisible initially */
   display: none;
 }
 
 /*////////// LOGO //////////*/
 
-#logo {
-  padding: 74px 0 0;
+#logo{
+  padding: 84px 0 0;
 }
 
 #logo h1 {
@@ -322,8 +324,8 @@ section {
 
 /*////////// DETAILS //////////*/
 
-#details {
-  border-top: 1px solid white;
+#details{
+border-top; 1px solid white;
 }
 
 #details div {
@@ -345,14 +347,10 @@ section {
 }
 
 /*////////// FOOTER //////////*/
-
-footer {
-  text-align: center; 
+footer{
+  text-align: center;
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid; 
+  border-top: 1px solid #ccc;
 }
-
-
-
