Use absolute font size

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: 800px) {
     #navbar nav a {
-        font-size: 0.9em;
+        font-size: 14px;
     }
 }
 
@@ -74,7 +74,7 @@
     #navbar nav a.menu-icon {
         display: block;
         float: right;
-        font-size: 1.5em;
+        font-size: 24px;
         padding: 10px 20px;
         width: auto;
     }
