--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,13 +36,13 @@
   }
 }
 
-@media only screen and(max-width:800px;){
+@media only screen and(max-width:800px){
   #navbar{
     font-size: 0.9em;
   }
 }
 
-@media only screen and (max-width:750px;){
+@media only screen and (max-width:750px){
   .col-1, .col-2, .col-3{
     width: 100%;
     margin-left: 0;
@@ -57,7 +57,7 @@
     padding-bottom: 20px;
   }
 
-  .col-3 p {
+  .col-3 p{
     -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;
@@ -69,7 +69,7 @@
     display:none;
   }
 
-  #navbar nav a .menu-icon{
+  #navbar nav a.menu-icon {
     display: block;
     float: right;
     font-size: 1.5em;
