--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,7 +89,7 @@
 	}
 }
 
-@medial only screen and (max-width: 495px) {
+@media only screen and (max-width: 495px) {
 	#logo h2 {
 		visibility: hidden;
 	}
