--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ img, video, audio, iframe, table, form {
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
- 
+  box-sizing: border-box;
 }
 
 .clearfix:after {
