--- a/css/responsive.css
+++ b/css/responsive.css
@@ -88,6 +88,10 @@
     padding: 60px 0 0;
   }
 }
-
+@media only screen and (max-width:495px) {
+  #logo h2{
+    visibility: hidden;
+  }
+}
 
 /* Bretts site */
