--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,9 +73,11 @@
 }
 
 @media only screen (max-width:700px) {
+  
   #navbar nav a {
     display: none;
   }
+
   #navbar nav a.menu-icon {
     display: block;
     float: right;
@@ -89,9 +91,10 @@
   }
 }
 @media only screen and (max-width:495px) {
-  #logo h2{
+
+  #logo h2 {
     visibility: hidden;
   }
 }
 
-/* Bretts site */
+/* Bretts website */
