--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ li {
   margin-left: 20px;
 }
 
-p, address { 
+p, address {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -253,7 +253,7 @@ header {
 
 #navbar nav a {
   display: inline-block;
-  width: 16.6666667%;
+  width: 16%;
   margin: 0;
   padding: 22px 0;
   text-transform: uppercase;
@@ -347,12 +347,9 @@ section {
 /*////////// FOOTER //////////*/
 
 footer {
-  text-align: center; 
+  text-align: center;
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid; 
+  border-top: 1px solid;
 }
-
-
-
