--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ iframe {
 img, video, audio, iframe, table, form {
   width: 100%; /* IE */
   max-width: 100%; /* FF, Safari, Chrome */
+  height: auto;
 }
 
 /*////////// FIXES //////////*/
@@ -353,6 +354,3 @@ footer {
   background: #eee;
   border-top: 1px solid; 
 }
-
-
-
