--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ img, video, audio, iframe, table, form {
   width: 66%;
 }
 
-.col-3 p {
+.col-3 p { /*3columns on page*/
   -moz-column-rule: 1px dotted #ccc;
   -webkit-column-rule: 1px dotted #ccc;
   column-rule: 1px dotted #ccc;
