--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,8 +30,17 @@
   #logo h2 {
     font-size: 2.2em;
   }
+  
+  #social {
+    top: 72px;
+  }
 }
 
-
+@media only screen and (max-width: 800px) {
+  
+  #navbar nav a {
+    font-size: 0.9em;
+  }
+}
 
 
