--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,4 +56,21 @@
     margin-left: 0;
     float: none;
   }
+  
+  .border-right {
+    border: 0;
+  }
+  
+  #details div {
+    height: auto;
+    padding-bottom: 0;
+  }
+  
+  .col-3 p {
+    -mox-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
 }
+
+
