--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
+
 /*////////// GLOBAL //////////*/
 
 body {
@@ -196,7 +197,23 @@ img, video, audio, iframe, table, form {
 
 /*/////// SOCIAL ////////*/
 
-#social {
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+/*#social {
   position: fixed;
   top: 163px;
   right: 20px;
@@ -211,9 +228,24 @@ img, video, audio, iframe, table, form {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
+}*/
+
+.facebook {
+  background: #3B5998;
+  color: white;
 }
 
-a.fbook, a.twit, a.gplus {
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+
+/*a.fbook, a.twit, a.gplus {
   background: url(../images/social-icons.png) no-repeat;
 }
 
@@ -227,7 +259,7 @@ a.twit:active { background-position: -80px -40px; }
 
 a.gplus { background-position: 0 -80px; }
 a.gplus:hover { background-position: -40px -80px; }
-a.gplus:active { background-position: -80px -80px; }
+a.gplus:active { background-position: -80px -80px; } */
 
 /*////////// HEADER //////////*/
 
